Esercizio completop ma con bug
da fixare l'animazione di focus nei menù a tendina.
Domani mi riguardo per bene la parte di lezione in cui Federico lo chiede a lezione e vedo se riesco a risolvere sennò domani apro un ticket

--- a/index.html
+++ b/index.html
@@ -4,10 +4,85 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Un modo migliore per gestire le tue finanze | Revolut IT</title>
 </head>
 <body>
+    <header>
+        <div class="container">
+            <div class="wrapper-nav-left">
+                <a href="#"><img src="img/logo (1).png" alt="logo"></a>
+                <nav>
+                    <ul class="nav-left">
+                        <li><a class="link link-active" href="#">Personale</a></li>
+                        <li><a class="link" href="#">Business</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="wrapper-nav-right">
+                <ul class="nav-right display-none-md ">
+                    <li><a class="link" href="#">Tariffazione</a></li>
+                    <li class="parent-dropdown">
+                        <a class="link" href="#">Accounts</a>
+                        <ul class="dropdown">
+                            <li><a class="link" href="#">Standard</a></li>
+                            <li><a class="link" href="#">Plus</a></li>
+                            <li><a class="link" href="#">Premium</a></li>
+                            <li><a class="link" href="#">Metal</a></li>
+                        </ul>
+                    </li>
+                    <li class="parent-dropdown link">
+                        <a class="link" href="#">Prodotti</a>
+                        <ul class="dropdown dropdown2">
+                            <li><a class="link" href="#">Crypto</a></li>
+                            <li><a class="link" href="#">Salvadanai</a></li>
+                            <li><a class="link" href="#">Trasferimenti di denaro</a></li>
+                            <li><a class="link" href="#">Fatture di gruppo</a></li>
+                        </ul>
+                    </li>
+                    <li class="parent-dropdown">
+                        <a  class="link" href="#">Azienda</a>
+                        <ul class="dropdown dropdown2">
+                        <li><a class="link" href="#">Chi siamo</a></li>
+                        <li><a class="link" href="#">Blog</a></li>
+                        <li><a class="link" href="#">Leadership</a></li>
+                        <li><a class="link" href="#">Sala stampa</a></li>
+                        <li><a class="link" href="#">Affiliate</a></li>
+                        <li><a class="link" href="#">Influencer</a></li>
+                        <li><a class="link" href="#">Lavora con noi</a></li>
+                        <li><a class="link" href="#">Cultura</a></li>
+                        <li><a class="link" href="#">Diversità e inclusione</a></li>
+                        <li><a class="link" href="#">Contatto</a></li>
+                        </ul>
+                    </li>
+                    <li class="parent-dropdown">
+                        <a class="link" href="#">Aiuto</a>
+                        <ul class="dropdown dropdown2">
+                        <li><a class="link" href="#">Centro assistenza</a></li>
+                        <li><a class="link" href="#">Community</a></li>
+                        <li><a class="link" href="#">Sicurezza</a></li>
+                        <li><a class="link" href="#">Stato di sistema</a></li>
+                        <li><a class="link" href="#">API sviluppatore</a></li>
+                        </ul>
+                    </li>
+                    <li class="parent-dropdown">
+                        <a class="link" href="#">IT<i class="fas fa-chevron-down"></i></a>
+                        <ul class="dropdown">
+                        <li><a class="link" href="#">Italiano</a></li>
+                        <li><a class="link" href="#">Inglese</a></li>
+                        </ul>
+                    </li>
+                    <li><button class="button" type="button" name="button">Scarica L'app</button></li>
+                </ul>
+                <ul class="nav-right ">
+                    <li><a class="link" href="#"><i class="fas fa-bars"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
